# hardware-aware-benchmarks

./: CMakeLists.txt  README.md
src/: access_patterns.h  allocators.h  benchmark_utils.h  branch_prediction.h  cache_lines.h  main.cpp  numa_topology.h  prefetching.h  tlb_huge_pages.h
